# gauss-llm-reference

./: AGENTS.md  ARCHITECTURE_PLAN.md  CLAUDE.md  README.md
.planning/: MILESTONES.md  (+6 more)
gauss-doc-qa/: .gitignore  missing_examples.txt  needed_images.md  persona_review_findings.md  pyproject.toml  screenshot_inventory.md  sphinx_warnings_report.md
gauss-doc-qa/src/gauss_doc_qa/: cli.py  diff.py  glossary.py  glossary_gen.py  models.py
gauss-doc-qa/src/gauss_doc_qa/ai/: checker.py  personas.py  reviewer.py  schemas.py
gauss-doc-qa/src/gauss_doc_qa/checkers/: __init__.py  base.py  code_blocks.py  coverage.py  glossary.py  links.py  orphans.py  sections.py  seealso.py  signatures.py
gauss-doc-qa/tests/: conftest.py  test_ai_integration.py  test_applier.py  test_classifier.py  test_cli.py  test_code_blocks.py  test_coverage.py  test_deep_ai_checker.py  test_deep_checker.py  test_deep_report.py  test_deep_validate_cli.py  test_diff.py  test_fix_cli.py  test_freq_cli.py  test_frequency.py  test_glossary.py  test_glossary_cli.py  test_glossary_fixer.py  test_glossary_gen.py  test_links.py  test_models.py  test_orphans.py  test_parser.py  test_personas.py  test_reporters.py  test_resolver.py  test_reviewer.py  test_sections.py  test_seealso.py  test_signatures.py  test_sphinx_env.py  test_verify.py
gauss-doc-qa/tests/fixtures/: broken_refs.rst  command_ref_sample.rst  empty_code.rst  function_page.rst  getting_started_sample.rst  include_fragment.rst  incomplete_sig.rst  index_page.rst  missing_code.rst  missing_sections.rst  operator_page.rst  user_guide_sample.rst
(+111 files in other folders)
