[project]
name = "gauss-doc-qa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "docutils>=0.22",
    "rich>=14.0",
    "click>=8.3",
    "sphinx>=9.0",
    "sphinx-design",
    "pydata-sphinx-theme",
    "anthropic>=0.80",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gauss-qa = "gauss_doc_qa.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
